--- a/index.html
+++ b/index.html
@@ -4,12 +4,7 @@
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>Verified Electronics — Tools</title>
-  <meta name="description" content="Internal tools hub for Verified Electronics." />
   <script src="https://cdn.tailwindcss.com"></script>
-  <style>
-    .card { background:#fff; border-radius:1rem; box-shadow:0 4px 18px rgba(2,6,23,.06); border:1px solid #eef2ff; }
-    .chip { font-size:.75rem; padding:.25rem .5rem; border-radius:.5rem; background:#eef2ff; color:#3730a3; }
-  </style>
 </head>
 <body class="bg-slate-50 text-slate-800">
   <!-- Brand stripe -->
@@ -19,74 +14,45 @@
     <!-- Header -->
     <header class="flex items-center justify-between mb-10">
       <div class="flex items-center gap-4">
-        <div class="w-14 h-14 rounded-2xl bg-white shadow ring-1 ring-slate-100 flex items-center justify-center overflow-hidden">
-          <!-- Your shared logo -->
-          <img src="assets/Logo_color_white_background (1).png" alt="Verified Electronics" class="max-w-12 max-h-12">
+        <div class="w-16 h-16 rounded-2xl bg-white shadow-sm ring-1 ring-slate-100 flex items-center justify-center overflow-hidden">
+          <img src="assets/Logo_color_white_background (1).png" alt="Verified Electronics" class="max-w-14 max-h-14" />
         </div>
         <div>
           <h1 class="text-2xl md:text-3xl font-semibold tracking-tight">Verified Electronics — Tools</h1>
           <p class="text-sm text-slate-500 mt-0.5">Internal utilities for sales & operations</p>
         </div>
       </div>
-      <span class="chip hidden md:inline-block">Private</span>
     </header>
 
-    <!-- Intro card -->
-    <section class="card p-5 md:p-6 mb-8">
-      <p class="text-slate-700">
-        Welcome to the tools hub. Choose a tool below. If you need access control, protect
-        <span class="font-medium">tools.verifiedelectronics.com</span> with Cloudflare Access.
-      </p>
-    </section>
-
-    <!-- Tool grid -->
+    <!-- Tool cards -->
     <section class="grid gap-6 md:grid-cols-2 lg:grid-cols-3">
-      <!-- Sales Order / Invoice PDF -->
-      <a href="/so-confirmation/" class="card group hover:shadow-lg transition">
-        <div class="p-5">
-          <div class="h-10 w-10 rounded-xl bg-gradient-to-br from-purple-600 to-indigo-600 opacity-90"></div>
-          <h2 class="mt-4 text-lg font-semibold">Sales Order / Invoice PDF</h2>
-          <p class="text-sm text-slate-500 mt-1.5">
-            Generate branded PDFs with line items, VAT, delivery terms, currency & totals.
-          </p>
-          <div class="mt-4 inline-flex items-center gap-1 text-indigo-600 group-hover:gap-2 transition">
-            Open tool <span>→</span>
-          </div>
-        </div>
+      <a href="so-confirmation/" class="group block rounded-2xl bg-white p-5 shadow ring-1 ring-slate-200 hover:shadow-lg transition">
+        <div class="h-10 w-10 rounded-xl bg-gradient-to-br from-purple-600 to-indigo-600 opacity-90"></div>
+        <h2 class="mt-4 text-lg font-semibold">Sales Order / Invoice PDF</h2>
+        <p class="text-sm text-slate-500 mt-1.5">Generate branded PDFs with VAT, delivery terms, currency & totals.</p>
+        <div class="mt-4 inline-flex items-center gap-1 text-indigo-600 group-hover:gap-2 transition">Open tool →</div>
       </a>
 
-      <!-- Excess Checker -->
-      <a href="/excess-checker/" class="card group hover:shadow-lg transition">
-        <div class="p-5">
-          <div class="h-10 w-10 rounded-xl bg-gradient-to-br from-fuchsia-600 to-purple-700 opacity-90"></div>
-          <h2 class="mt-4 text-lg font-semibold">Excess Checker</h2>
-          <p class="text-sm text-slate-500 mt-1.5">
-            Search parts quickly, import CSV, and view supplier counts & availability.
-          </p>
-          <div class="mt-4 inline-flex items-center gap-1 text-indigo-600 group-hover:gap-2 transition">
-            Open tool <span>→</span>
-          </div>
-        </div>
+      <a href="excess-checker/" class="group block rounded-2xl bg-white p-5 shadow ring-1 ring-slate-200 hover:shadow-lg transition">
+        <div class="h-10 w-10 rounded-xl bg-gradient-to-br from-fuchsia-600 to-purple-700 opacity-90"></div>
+        <h2 class="mt-4 text-lg font-semibold">Excess Checker</h2>
+        <p class="text-sm text-slate-500 mt-1.5">Search parts, import CSV, view supplier counts & availability.</p>
+        <div class="mt-4 inline-flex items-center gap-1 text-indigo-600 group-hover:gap-2 transition">Open tool →</div>
       </a>
 
-      <!-- Placeholder for future tools -->
-      <div class="card p-5 text-slate-500">
+      <div class="rounded-2xl bg-white p-5 shadow ring-1 ring-slate-200">
         <div class="h-10 w-10 rounded-xl bg-slate-200"></div>
-        <h2 class="mt-4 text-lg font-semibold text-slate-700">Add another tool</h2>
-        <p class="text-sm mt-1.5">Drop a new app at <code class="text-slate-700">/new-tool/index.html</code> and add a card here.</p>
+        <h2 class="mt-4 text-lg font-semibold">More tools coming</h2>
+        <p class="text-sm text-slate-500 mt-1.5">Add another app under <code class="text-slate-700">/new-tool/index.html</code> and put a card here.</p>
       </div>
     </section>
 
-    <!-- Footer -->
-    <footer class="mt-12 text-xs text-slate-400">
-      © <span id="y"></span> Verified Electronics. Internal use.
-    </footer>
+    <footer class="mt-12 text-xs text-slate-400">© <span id="y"></span> Verified Electronics. Internal use.</footer>
   </main>
 
-  <script>
-    // year
-    document.getElementById('y').textContent = new Date().getFullYear();
-  </script>
+  <script>document.getElementById('y').textContent = new Date().getFullYear();</script>
 </body>
 </html>
+
+
 
