--- a/coc.index.html
+++ b/coc.index.html
@@ -7,105 +7,75 @@
   <link rel="icon" href="data:;base64,iVBORw0KGgo=" />
   <style>
     :root{
-      --brand:#673ab7;           /* VE purple (matches your other tools) */
-      --ink:#222;
-      --muted:#666;
-      --bg:#fafafa;
-      --card:#ffffff;
-      --line:#e9e9ef;
+      --brand:#673ab7;
+      --ink:#222; --muted:#666; --bg:#fafafa; --card:#ffffff; --line:#e9e9ef;
     }
     *{box-sizing:border-box}
     html,body{height:100%}
-    body{
-      margin:0;
-      font:14px/1.45 system-ui,-apple-system,Segoe UI,Roboto,Inter,Helvetica,Arial,sans-serif;
-      color:var(--ink);
-      background:var(--bg);
-    }
-    header{
-      display:flex; align-items:center; gap:14px;
-      padding:16px 18px; border-bottom:1px solid var(--line); background:#fff;
-      position:sticky; top:0; z-index:3;
-    }
+    body{margin:0; font:14px/1.45 system-ui,-apple-system,Segoe UI,Roboto,Inter,Helvetica,Arial,sans-serif; color:var(--ink); background:var(--bg)}
+    header{display:flex; align-items:center; gap:14px; padding:16px 18px; border-bottom:1px solid var(--line); background:#fff; position:sticky; top:0; z-index:3}
     header img{height:36px}
     header h1{font-size:18px; margin:0; font-weight:700}
     header .tag{margin-left:auto; font-size:12px; color:#fff; background:var(--brand); padding:6px 10px; border-radius:999px}
-    .wrap{
-      max-width:1200px; margin:24px auto; padding:0 16px; display:grid; grid-template-columns: 420px 1fr; gap:18px;
-    }
-    .card{
-      background:var(--card); border:1px solid var(--line); border-radius:12px; box-shadow:0 2px 10px rgba(0,0,0,.03);
-    }
-    .card h2{
-      margin:0; padding:14px 16px; border-bottom:1px solid var(--line); font-size:15px; font-weight:700;
-      background:linear-gradient(180deg,#fff, #fbfbff);
-    }
+
+    .wrap{max-width:1200px; margin:24px auto; padding:0 16px; display:grid; grid-template-columns: 420px 1fr; gap:18px}
+    .card{background:var(--card); border:1px solid var(--line); border-radius:12px; box-shadow:0 2px 10px rgba(0,0,0,.03)}
+    .card h2{margin:0; padding:14px 16px; border-bottom:1px solid var(--line); font-size:15px; font-weight:700; background:linear-gradient(180deg,#fff,#fbfbff)}
     .body{padding:16px}
     .grid{display:grid; grid-template-columns:1fr 1fr; gap:10px}
     .grid3{display:grid; grid-template-columns:1fr 1fr 1fr; gap:10px}
     label{display:block; font-size:12px; color:var(--muted); margin:8px 0 4px}
-    input,textarea,select{
-      width:100%; padding:10px 12px; border:1px solid var(--line); border-radius:8px; font:inherit; background:#fff;
-    }
+    input,textarea,select{width:100%; padding:10px 12px; border:1px solid var(--line); border-radius:8px; font:inherit; background:#fff}
     textarea{min-height:84px; resize:vertical}
     .row{display:flex; gap:10px; align-items:center; flex-wrap:wrap}
     .row .grow{flex:1}
     .subtle{color:var(--muted)}
-    .btn{
-      appearance:none; border:0; border-radius:9px; padding:12px 16px; font-weight:700; cursor:pointer;
-      background:var(--brand); color:#fff; box-shadow:0 6px 16px rgba(103,58,183,.25);
-    }
+    .btn{appearance:none; border:0; border-radius:9px; padding:12px 16px; font-weight:700; cursor:pointer; background:var(--brand); color:#fff; box-shadow:0 6px 16px rgba(103,58,183,.25)}
     .btn.secondary{background:#f2f0fb; color:var(--brand); box-shadow:none; border:1px solid #e3ddfb}
     .btn.ghost{background:#fff; color:var(--brand); border:1px solid var(--line)}
     .toolbar{display:flex; gap:10px; padding:12px 16px; border-top:1px solid var(--line); background:#fff; border-radius:0 0 12px 12px}
     .footnote{font-size:12px; color:var(--muted)}
+
     /* Preview panel */
-    .preview{
-      padding:0; overflow:auto;
-    }
+    .preview{padding:0; overflow:auto}
     .paper{
-      width:794px; /* A4 portrait at 96dpi approx */
-      min-height:1123px;
-      margin:16px auto; background:#fff; color:#000;
+      width:794px;               /* A4 portrait-ish for screen preview */
+      margin:16px auto;
+      background:#fff; color:#000;
       border:1px solid var(--line); border-radius:12px;
       box-shadow:0 6px 24px rgba(0,0,0,.06);
       padding:48px;
       position:relative;
     }
-    .paper header{
-      position:relative; top:auto; border:0; background:#fff; padding:0; margin-bottom:18px;
-    }
-    .paper header .brandline{
-      width:64px; height:6px; background:var(--brand); border-radius:999px; margin-top:8px;
-    }
-    .title{
-      font-size:22px; letter-spacing:.2px; font-weight:800; margin:18px 0 4px;
-    }
+    .paper header{position:relative; border:0; background:#fff; padding:0; margin-bottom:18px}
+    .paper header .brandline{width:64px; height:6px; background:var(--brand); border-radius:999px; margin-top:8px}
+    .title{font-size:22px; letter-spacing:.2px; font-weight:800; margin:18px 0 4px}
     .meta{font-size:12px; color:#444}
     hr{border:0; border-top:1px solid #ebebf5; margin:18px 0}
     .cols{display:grid; grid-template-columns:1.2fr .8fr; gap:16px}
     .k{font-size:11px; color:#666}
     .v{font-weight:600}
     .table{width:100%; border:1px solid #ececf6; border-radius:10px; overflow:hidden}
-    .table .row{
-      display:grid; grid-template-columns: 1fr 1.4fr; gap:0; border-top:1px solid #ececf6;
-    }
+    .table .row{display:grid; grid-template-columns: 1fr 1.4fr; gap:0; border-top:1px solid #ececf6}
     .table .row:first-child{border-top:0}
     .table .cell{padding:10px 12px; font-size:13px}
     .table .cell.k{background:#fafaff; color:#555}
     .blurb{font-size:12.5px; color:#222}
     .muter{font-size:11.5px; color:#666}
-    .sign{
-      display:grid; grid-template-columns:1.2fr .8fr; gap:16px; align-items:end; margin-top:22px
-    }
+    .sign{display:grid; grid-template-columns:1.2fr .8fr; gap:16px; align-items:end; margin-top:22px}
     .sigline{height:44px; border-bottom:1px solid #cfcfe9}
-    .right{ text-align:right }
+    .right{text-align:right}
     .logo{height:44px}
+
     /* Print/PDF tweaks */
-    @media print {
+    @media print{
       .wrap {display:block}
       .card, .toolbar, .headerbar {display:none!important}
-      .paper {margin:0; border:0; box-shadow:none; page-break-after:always}
+      .paper{
+        width:auto;              /* let html2pdf size/scale cleanly */
+        border:0; box-shadow:none; margin:0; padding:36px; /* safe inner padding */
+        page-break-after:always;
+      }
     }
   </style>
 </head>
@@ -193,8 +163,8 @@
         <label>Specifications / Special Processes</label>
         <textarea id="specs" placeholder="Any specifications, special processes, standards…"></textarea>
 
-        <label>Serial No(s)</label>
-        <textarea id="serials" placeholder="One per line"></textarea>
+        <label>Date Code(s)</label>
+        <textarea id="dateCodes" placeholder="One per line e.g. 2248, 2303"></textarea>
 
         <hr/>
 
@@ -284,8 +254,8 @@
             <div class="cell v" id="p_specs"></div>
           </div>
           <div class="row">
-            <div class="cell k">Serial No(s)</div>
-            <div class="cell v" id="p_serials"></div>
+            <div class="cell k">Date Code(s)</div>
+            <div class="cell v" id="p_dateCodes"></div>
           </div>
         </div>
 
@@ -335,7 +305,7 @@
     // ===== state wiring =====
     const fields = [
       'certTitle','certNo','company','po','addr1','state','zip',
-      'mfgPart','lot','dom','dateShipped','qty','desc','specs','serials',
+      'mfgPart','lot','dom','dateShipped','qty','desc','specs','dateCodes',
       'signName','signDate','showLogo'
     ];
 
@@ -402,7 +372,7 @@
       $('#p_qty').textContent            = $('#qty').value || '';
       $('#p_desc').innerHTML             = nl2br($('#desc').value);
       $('#p_specs').innerHTML            = nl2br($('#specs').value);
-      $('#p_serials').innerHTML          = nl2br($('#serials').value);
+      $('#p_dateCodes').innerHTML        = nl2br($('#dateCodes').value);
       $('#p_signName').textContent       = $('#signName').value || '';
       $('#p_signDate').textContent       = fmt($('#signDate').value);
 
@@ -430,11 +400,12 @@
 
       const element = document.getElementById('paper');
       const opt = {
-        margin:       [12,12,12,12],
+        margin:       0,   // avoid overflow + blank page
         filename,
         image:        { type: 'jpeg', quality: 0.98 },
-        html2canvas:  { scale: 2, useCORS:true },
-        jsPDF:        { unit: 'pt', format: 'a4', orientation: 'portrait' }
+        html2canvas:  { scale: 2, useCORS:true, scrollY: 0, scrollX: 0 },
+        jsPDF:        { unit: 'pt', format: 'a4', orientation: 'portrait' },
+        pagebreak:    { mode: ['css','legacy'] }
       };
       await html2pdf().set(opt).from(element).save();
     });
@@ -448,3 +419,5 @@
   </script>
 </body>
 </html>
+
+
